<resources>
    <string name="app_name">MI CARTERA PROXUS</string>
    <string name="btn1_ingresos">Ingreso</string>
    <string name="btn2_gastos">Gasto</string>
    <string name="btn3_movimientos">Movimientos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_guardar">Guardar</string>
    <string name="Text">-</string>
    <string name="Text1">=</string>
    <string name="txtV1">Ingreso:</string>
    <string name="txtV2">Saldo Anterior:</string>
    <string name="txtV3">Gasto:</string>
    <string name="txtV4">Saldo Actual:</string>
    <string name="txtV5">+</string>
    <string name="btn4_inicio">Inicio</string>
    <string name="categoria">Categoria</string>
    <string name="mes">Mes</string>
    <string name="movimientos">MOVIMIENTOS</string>
    <string name="frgMov_txv1">Movimientos</string>
    <string name="frgMov_txv2">Mes</string>
    <string name="frgMov_txv3">Categoría</string>
    <string name="frgInicio_txv1">Balance mensual + remanentes</string>
    <string name="frgInic_description1">Add symbol green</string>
    <string name="frgInic_description2">Remove symbol red</string>
    <string name="frgInic_description3">Equal symbol green</string>
    <string name="frgInic_txvIngreso" />
    <string name="frgInic_txvSaldo" />
    <string name="frgInic_txvSaldo_Act" />
    <string name="frgInic_txvGasto" />
</resources>